# boids

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
include/glad/: glad.h
res/shaders/: basic.frag  basic.vert
src/: Application.cpp  Application.hpp  Boid.cpp  Boid.hpp  Camera.cpp  Camera.hpp  Cuboid.cpp  Cuboid.hpp  Pyramid.cpp  Pyramid.hpp  Shader.cpp  Shader.hpp  Tetrahedron.cpp  Tetrahedron.hpp  glad.c  main.cpp  utils.hpp
